Chroma sample update